# umbra-rs

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md  deny.toml  docker-compose.yml  tdd-workflow.md
.cargo/: config.toml
.github/workflows/: ci.yml  mutation.yml
crates/umbra-cli/: Cargo.toml
crates/umbra-cli/src/: lib.rs  main.rs
crates/umbra-core/: Cargo.toml
crates/umbra-core/src/: angle.rs  calendar.rs  constants.rs  deltat.rs  ellipsoid.rs  eop.rs  error.rs  julian.rs  lib.rs  matrix.rs  metadata.rs  observer.rs  solver.rs  time.rs  timescales.rs  vector.rs
crates/umbra-eclipse/: Cargo.toml
crates/umbra-eclipse/src/: axis_intercept.rs  bessel_poly.rs  besselian.rs  calc_metadata.rs  candidates.rs  config.rs  conjunction.rs  eclipse_filter.rs  engine.rs  error.rs  filter_margins.rs  fundamental.rs  global.rs  global_contacts.rs  horizontal.rs  lib.rs  local_contacts.rs  local_maximum.rs  magnitude.rs  path.rs  polynomial.rs  position_angle.rs  projection.rs  results.rs  shadow.rs  source.rs
crates/umbra-eclipse/tests/: eclipse_error_non_exhaustive.rs  filter_margins.rs  path_center_line.rs  path_geojson.rs  path_limits.rs
crates/umbra-ephemeris/: Cargo.toml
crates/umbra-ephemeris/src/: analytical.rs  apparent.rs  cio.rs  eop.rs  ephemeris.rs  frames.rs  lib.rs  mock.rs  moon.rs  nutation.rs  sun.rs  time_data.rs
crates/umbra-ephemeris/src/jpl/: backend.rs  daf.rs  eval.rs  mod.rs
crates/umbra-ephemeris/tests/: de_diff.rs
crates/umbra-fixtures/: Cargo.toml
crates/umbra-fixtures/data/golden/: 1999-08-11-total.toml  2002-12-04-total.toml  2003-05-31-annular.toml  2005-10-03-annular.toml  2006-03-29-total.toml  2009-07-22-total.toml  2010-01-15-annular.toml  2012-05-20-annular.toml  2013-11-03-hybrid.toml  2014-10-23-partial.toml  2017-08-21-total.toml  2018-08-11-partial.toml  2020-06-21-annular.toml  2021-06-10-annular.toml  2022-10-25-partial.toml  2023-04-20-hybrid.toml  2023-10-14-annular.toml  2024-04-08-total.toml  2025-03-29-partial.toml  2026-08-12-total.toml
crates/umbra-fixtures/src/: checksum.rs  lib.rs  loader.rs  report.rs  types.rs
crates/umbra-fixtures/tests/: golden.rs  report_differential.rs  report_global.rs  report_golden.rs  report_local.rs  report_render.rs  report_stats.rs  report_stratified.rs  sweep.rs
crates/umbra-geo/: Cargo.toml
crates/umbra-geo/src/: geometry.rs  lib.rs
crates/umbra-geo/tests/: geojson.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: checksum.rs  dataset.rs  differential.rs  elp.rs  eop.rs  error.rs  lib.rs  main.rs  nutation.rs  packed.rs  spk.rs  sweep.rs  validate.rs  vsop87.rs
crates/xtask/tests/: cli.rs  differential.rs  sweep.rs  validate.rs
data/spk/: PROVENANCE.md
docs/: accuracy.md  algorithms.md  api-draft.md  architecture.md  conventions.md  data-sources.md  numerical-policy.md  operations.md  physical-models.md
docs/agents/: domain.md  issue-tracker.md
docs/algorithms/: 01-time-scales.md  02-frames.md  03-ephemeris.md  04-search.md  05-shadow-cone.md  06-besselian.md  07-bessel-polynomial.md  08-global.md  09-local.md  10-observer.md  11-path-partial-domain.md  elp2000-82b-evaluation.md
docs/issues/: ISSUE-001-project-conventions-units.md  ISSUE-002-angle-newtypes.md  ISSUE-003-vector3-matrix3.md  ISSUE-004-julian-date2.md  ISSUE-005-gregorian-calendar.md  ISSUE-006-utc-tai-tt.md  ISSUE-007-ut1-deltat-eop.md  ISSUE-008-brent-root-solver.md  ISSUE-009-one-dimensional-minimizer.md  ISSUE-010-earth-ellipsoid-wgs84.md  ISSUE-011-geodetic-observer-to-terrestrial-vector.md  ISSUE-012-ephemeris-trait.md  ISSUE-013-analytical-sun-vsop87d.md  ISSUE-014-analytical-moon-elp-mpp02.md  ISSUE-015-apparent-geocentric-coordinates.md  ISSUE-016-new-moon-candidate-generator.md  ISSUE-017-conjunction-solver.md  ISSUE-018-eclipse-candidate-filter.md  ISSUE-019-shadow-cone-geometry.md  ISSUE-020-fundamental-plane-basis.md  ISSUE-021-instantaneous-besselian-elements.md  ISSUE-022-bessel-polynomial-fitting.md  ISSUE-023-global-eclipse-classification.md  ISSUE-024-local-observer-projection.md  ISSUE-025-c1-c4-contact-solver.md  ISSUE-026-maximum-eclipse-solver.md  ISSUE-027-magnitude-and-obscuration.md  ISSUE-028-sun-altitude-azimuth-visibility.md  ISSUE-029-golden-fixtures.md  ISSUE-030-error-statistics-report.md  ISSUE-031-cli-search.md  ISSUE-032-cli-local.md  ISSUE-033-vsop87-coefficient-pipeline.md  ISSUE-034-elp-mpp02-coefficient-pipeline.md  ISSUE-035-precession-nutation-frames.md  ISSUE-036-jpl-de-backend-spk-reader.md  ISSUE-037-instantaneous-besselian-evaluator.md  ISSUE-038-mock-ephemeris.md  ISSUE-039-gast-apparent-hour-angle-supply.md  ISSUE-040-iau2000a-nutation-coefficient-pipeline.md  (+8 more)
docs/reviews/: milestone0-review.md  mutation-apparent.md  mutation-axis-intercept.md  mutation-bessel-poly.md  mutation-central-width-duration.md  mutation-conjunction.md  mutation-eclipse-filter.md  mutation-eop.md  mutation-geojson-polygon.md  mutation-global-kind.md  mutation-limit-line.md  mutation-local-circumstances.md  mutation-local-contacts.md  mutation-local-maximum.md  mutation-moon.md  mutation-next-visible.md  mutation-partial-domain.md  mutation-path-samples.md  mutation-report-stats.md  mutation-rise-set.md  mutation-search.md  mutation-umbra-core.md  mutation-validate.md  pre-implementation-audit.md
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/diff/: crates__umbra-core__src__angle.rs_line_27_col_24.diff  crates__umbra-core__src__angle.rs_line_27_col_24_001.diff  crates__umbra-core__src__angle.rs_line_27_col_32.diff  crates__umbra-core__src__angle.rs_line_27_col_32_001.diff  crates__umbra-core__src__angle.rs_line_27_col_9.diff  crates__umbra-core__src__angle.rs_line_32_col_9.diff  crates__umbra-core__src__angle.rs_line_33_col_22.diff  crates__umbra-core__src__angle.rs_line_33_col_32.diff  crates__umbra-core__src__angle.rs_line_33_col_32_001.diff  crates__umbra-core__src__angle.rs_line_38_col_9.diff  (+655 more)
(+5 files in other folders)
