[package]
name = "umbra-eclipse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "umbra-rs eclipse engine: shadow geometry, Besselian elements, global/local circumstances — work in progress"

[lints]
workspace = true

[dependencies]
umbra-core = { path = "../umbra-core" }
umbra-ephemeris = { path = "../umbra-ephemeris" }
thiserror = "2"
