[package]
name = "umbra-eclipse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "umbra-rs eclipse engine: shadow geometry, Besselian elements, global/local circumstances — work in progress"

[lints]
workspace = true

[features]
# 同梱 IERS EOP C04 + 閏秒を埋め込む（既定 on, ISSUE-007/042 確定B3）。
# umbra-ephemeris の `bundled-data` へ転送し、`standard_engine(bundled_time_data())` の
# §78 標準構築経路（ISSUE-043 S5b）を有効にする。off 時は外部供給が必須となる。
default = ["bundled-data"]
bundled-data = ["umbra-ephemeris/bundled-data"]
# 全球結果型（SolarEclipse 推移閉包）の serde 表現（Serialize のみ, ISSUE-031 S31b）。
# core/geo の serde へカスケード（列挙は #[serde(tag="type")]、数値の単位はフィールド名で明示・A7）。
serde = ["dep:serde", "umbra-core/serde", "umbra-geo/serde"]

[dependencies]
umbra-core = { path = "../umbra-core" }
umbra-ephemeris = { path = "../umbra-ephemeris", default-features = false }
# 全球/局地 result 型の地理座標（GeoPoint 等, ISSUE-043 S4d）。geo→core のみ＝循環なし。
umbra-geo = { path = "../umbra-geo" }
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }
# 経路 GeoJSON 出力（`EclipsePath::to_geojson`・M9.2 FeatureCollection 組立）。
serde_json = "1"
