[package]
name = "umbra-fixtures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "umbra-rs validation fixtures and tolerance profiles (test-only) — work in progress"
publish = false

[lints]
workspace = true

[dependencies]
umbra-core = { path = "../umbra-core" }
umbra-eclipse = { path = "../umbra-eclipse" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"

[dev-dependencies]
# 全球比較テスト（ISSUE-030 S30b）で computed SolarEclipse を struct リテラル構築する際、
# GreatestEclipse/GlobalContact 内の GeoPoint を直接組むため。
umbra-geo = { path = "../umbra-geo" }
