[package]
name = "umbra-fixtures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "umbra-rs validation fixtures and tolerance profiles (test-only) — work in progress"
publish = false

[lints]
workspace = true

[dependencies]
umbra-core = { path = "../umbra-core" }
umbra-eclipse = { path = "../umbra-eclipse" }
serde = { version = "1", features = ["derive"] }
# 誤差レポートの機械可読 JSON 出力（ISSUE-030 S30e・render_json）。
serde_json = "1"
toml = "0.8"
sha2 = "0.10"

[dev-dependencies]
# 全球比較テスト（ISSUE-030 S30b）で computed SolarEclipse を struct リテラル構築する際、
# GreatestEclipse/GlobalContact 内の GeoPoint を直接組むため。
umbra-geo = { path = "../umbra-geo" }
# report_against_golden の SLOW 統合テスト（ISSUE-030 S30d）で実エンジンを構築するため
# （bundled_time_data / standard_engine）。本体は trait 注入で umbra-ephemeris 非依存。
umbra-ephemeris = { path = "../umbra-ephemeris", features = ["bundled-data"] }
