[package]
name = "umbra-geo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "umbra-rs path / GeoJSON output — work in progress (Milestone 9)"

[lints]
workspace = true

[features]
# GeoPoint の serde 表現（{lat_deg, lon_deg} の custom Serialize, ISSUE-031 S31b）。
# umbra-core/serde（量 newtype 等）へカスケード。
serde = ["dep:serde", "umbra-core/serde"]

[dependencies]
umbra-core = { path = "../umbra-core" }
serde = { version = "1", features = ["derive"], optional = true }
# GeoJSON 出力（`GeoPoint/GeoLine::geojson_geometry`・M9.2）。umbra-geo の明示目的（中心線/限界線/GeoJSON）。
serde_json = "1"
