[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "umbra-rs internal build tasks: coefficient generation, generated-artifact verification, license/data checks (ISSUE-046)"

[lints]
workspace = true

[dependencies]
umbra-core = { path = "../umbra-core" }
sha2 = "0.10"
thiserror = "2"
# validate サブコマンド（ISSUE-030 S30f）: ゴールデン照合を実エンジンで実走しレポート出力。
# umbra-fixtures（検証専用）の依存は dev ツールである xtask に限定（本番 CLI は非依存・architecture §1）。
umbra-eclipse = { path = "../umbra-eclipse" }
# differential サブコマンド（ISSUE-030 DE差分・層分解）は JPL DE Reference バックエンドを使うため
# `jpl` feature を有効化（追加依存なしの純Rust SPK reader）。de440s.bsp は非同梱・実行時に解決。
umbra-ephemeris = { path = "../umbra-ephemeris", features = ["bundled-data", "jpl"] }
umbra-fixtures = { path = "../umbra-fixtures" }
serde_json = "1"

[dev-dependencies]
# validate 統合テスト（ISSUE-030 S30f）の合成フィクスチャ構築に GeoPoint を使う（テスト専用）。
umbra-geo = { path = "../umbra-geo" }

[[bin]]
name = "xtask"
path = "src/main.rs"

[lib]
name = "xtask"
path = "src/lib.rs"
